--- a/app/src/main/res/layout/fragment_popularmusic.xml
+++ b/app/src/main/res/layout/fragment_popularmusic.xml
@@ -7,12 +7,12 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="49dp"
         android:padding="10dp"
-        android:text="百度音乐排行榜前21首热门歌曲"
-        android:textSize="16dp"
+        android:text="百度音乐前20首流行歌曲"
+        android:textSize="18dp"
         android:textStyle="bold"
-        android:background="#E6E6E6"
+        android:background="#a30500"
         android:textAlignment="textStart"/>
 
     <ListView
