--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,12 +7,12 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="49dp"
         android:padding="10dp"
         android:text="本地搜索"
-        android:textSize="16dp"
+        android:textSize="18dp"
         android:textStyle="bold"
-        android:background="#E6E6E6"
+        android:background="#a30500"
         android:textAlignment="textStart"/>
 
     <LinearLayout
