--- a/app/src/main/res/layout/activity_playmusic.xml
+++ b/app/src/main/res/layout/activity_playmusic.xml
@@ -9,6 +9,7 @@
         android:layout_height="48dp"
         android:id="@+id/titlebar"
         android:padding="5dp"
+        android:background="#ff0000"
         android:orientation="horizontal">
 
         <ImageView
@@ -25,6 +26,7 @@
             android:text="返回"
             android:textSize="16dp"
             android:textStyle="bold"
+            android:background="#ff0000"
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
