--- a/app/src/main/res/layout/fragment_mymusic.xml
+++ b/app/src/main/res/layout/fragment_mymusic.xml
@@ -12,7 +12,8 @@
         android:text="本地音乐"
         android:textSize="18dp"
         android:textStyle="bold"
-        android:background="#a30500"
+        android:textColor="#000000"
+        android:background="#ff0000"
         android:textAlignment="textStart"/>
 
     <ListView
