--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,7 +12,8 @@
         android:text="本地搜索"
         android:textSize="18dp"
         android:textStyle="bold"
-        android:background="#a30500"
+        android:textColor="#000000"
+        android:background="#ff0000"
         android:textAlignment="textStart"/>
 
     <LinearLayout
