--- a/app/src/main/res/layout/activity_playmusic.xml
+++ b/app/src/main/res/layout/activity_playmusic.xml
@@ -26,6 +26,7 @@
             android:text="返回"
             android:textSize="16dp"
             android:textStyle="bold"
+            android:textColor="#000000"
             android:background="#ff0000"
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
@@ -45,18 +46,22 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="16dp"
-            android:gravity="center"/>
-        <TextView
             android:id="@+id/song"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="大鱼"
             android:textStyle="bold"
+            android:textColor="#000000"
             android:textSize="16dp"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="周深"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:textSize="12dp"
             android:gravity="center"/>
     </LinearLayout>
 
