修改账号注册等限制

--- a/app/src/main/res/layout/activity_changepassword.xml
+++ b/app/src/main/res/layout/activity_changepassword.xml
@@ -41,6 +41,8 @@
             android:id="@+id/changeaccountcontent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:digits="1234567890"
+            android:maxLength="10"
             android:layout_weight="6"/>
 
     </LinearLayout>
@@ -64,6 +66,8 @@
             android:id="@+id/oldpassword"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:digits="1234567890"
+            android:maxLength="10"
             android:layout_weight="6"/>
 
     </LinearLayout>
@@ -87,6 +91,8 @@
             android:id="@+id/newpassword"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:digits="1234567890"
+            android:maxLength="10"
             android:layout_weight="6"/>
 
     </LinearLayout>
