--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,8 @@
             android:id="@+id/loginaccount"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:digits="1234567890"
+            android:maxLength="10"
             android:layout_weight="6"/>
 
     </LinearLayout>
@@ -60,6 +62,8 @@
             android:id="@+id/loginpassword"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:digits="1234567890"
+            android:maxLength="10"
             android:layout_weight="6"/>
 
     </LinearLayout>
