--- a/app/src/main/res/layout/activity_changepassword.xml
+++ b/app/src/main/res/layout/activity_changepassword.xml
@@ -68,6 +68,7 @@
             android:layout_height="match_parent"
             android:digits="1234567890"
             android:maxLength="10"
+            android:inputType="numberPassword"
             android:layout_weight="6"/>
 
     </LinearLayout>
@@ -93,6 +94,7 @@
             android:layout_height="match_parent"
             android:digits="1234567890"
             android:maxLength="10"
+            android:inputType="numberPassword"
             android:layout_weight="6"/>
 
     </LinearLayout>
