--- a/app/src/main/res/layout/fragment_usercenter.xml
+++ b/app/src/main/res/layout/fragment_usercenter.xml
@@ -36,6 +36,30 @@
         android:text="201527010625"/>
 
 
+    <LinearLayout
+        android:id="@+id/collection"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/like"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="收藏音乐"
+            android:textSize="18dp"
+            android:textColor="#000000"
+            android:layout_marginLeft="20dp"
+            android:layout_gravity="center_vertical"/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/changepassword"
