--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -1,24 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="30dp"
               android:layout_centerHorizontal="true"
               android:layout_alignParentBottom="true"
-              android:paddingTop="10dp"
+
               android:paddingLeft="10dp"
               android:orientation="horizontal">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:src="@drawable/musicitem"
+        android:scaleType="centerInside"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"/>
 
     <TextView
         android:id="@+id/song_name"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:text="追光者"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"/>
 
     <TextView
         android:id="@+id/singer_name"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="match_parent"
+        android:text="aaaa"
+        android:maxLines="1"
         android:layout_marginLeft="10dip"
-        android:layout_weight="1"/>
+        android:gravity="center_vertical"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"/>
+
+    <ImageView
+        android:id="@+id/like"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/like"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        />
 
 </LinearLayout>
