--- a/app/src/main/res/layout/fragment_mymusic.xml
+++ b/app/src/main/res/layout/fragment_mymusic.xml
@@ -18,7 +18,7 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/listView"
         android:layout_weight="1"/>
 </LinearLayout>
