--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="收藏音乐"
+            android:text="收藏列表"
             android:textSize="16dp"
             android:textStyle="bold"
             android:textColor="#000000"
