--- a/app/src/main/res/layout/fragment_usercenter.xml
+++ b/app/src/main/res/layout/fragment_usercenter.xml
@@ -54,7 +54,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="收藏音乐"
+            android:text="收藏列表"
             android:textSize="18dp"
             android:textColor="#000000"
             android:layout_marginLeft="20dp"
