--- a/app/src/main/res/layout/activity_playmusic.xml
+++ b/app/src/main/res/layout/activity_playmusic.xml
@@ -29,6 +29,16 @@
             android:textColor="#000000"
             android:background="#ff0000"
             android:layout_gravity="center_vertical"/>
+
+        <ImageView
+            android:id="@+id/memu"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/menu"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="270dp"/>
+
+
     </LinearLayout>
 
     <ImageView
