增加播放模式

--- a/app/src/main/res/layout/activity_playmusic.xml
+++ b/app/src/main/res/layout/activity_playmusic.xml
@@ -125,6 +125,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/seekbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
@@ -156,7 +157,17 @@
             android:layout_gravity="center"
             android:layout_weight="1"/>
 
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/model"
+        android:layout_above="@id/seekbar"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/model1"/>
 
 
 
