--- a/app/src/main/res/layout/activity_changepassword.xml
+++ b/app/src/main/res/layout/activity_changepassword.xml
@@ -4,16 +4,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:padding="10dp"
-        android:text="修改密码"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:textColor="#000000"
+        android:layout_height="48dp"
+        android:id="@+id/changepasswordtitle"
+        android:padding="5dp"
         android:background="#ff0000"
-        android:textAlignment="textStart"/>
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/title_back"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/back"
+            android:layout_gravity="center_vertical"/>
+
+        <TextView
+            android:id="@+id/describetitle"
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:text="修改密码"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:background="#ff0000"
+            />
+    </LinearLayout>
 
     <ImageView
         android:layout_width="match_parent"
