--- a/app/src/main/res/layout/fragment_usercenter.xml
+++ b/app/src/main/res/layout/fragment_usercenter.xml
@@ -62,6 +62,31 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/downloadtap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/download"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="下载列表"
+            android:textSize="18dp"
+            android:textColor="#000000"
+            android:layout_marginLeft="20dp"
+            android:layout_gravity="center_vertical"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/changepassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
